# gearmate-agent

./: .env.example  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
.codex-test-tmp-memory-full-final/test_new_scenario_is_added_by_0/: scenarios.toml
alembic/: env.py
alembic/versions/: 0001_create_agent_store.py  0002_conversation_memory.py  0003_product_semantic_index.py  0004_catalog_aliases.py  0005_conversation_retention_index.py  0006_dynamic_catalog_use_cases.py  0007_date_only_conversation_rental_period.py  0008_user_memories.py  0009_user_memory_identity_and_audit.py  0010_remove_rental_conversation_state.py
evals/: README.md  action_routing_cases.jsonl  evaluate_action_routing.py
src/gearmate/: __init__.py  actions.py  app.py  catalog.py  config.py  embeddings.py  graph_state.py  ids.py  intent_router.py  main.py  memory.py  recommendations.py  rental_period.py  requirements.py  responses.py  search.py  (+1 more)
tests/: test_actions.py  test_agent_action_flow.py  test_agent_api.py  test_agent_scenario_flow.py  test_app.py  test_catalog.py  test_conversation_retention.py  test_intent_router.py  test_memory.py  test_model_capacity_errors.py  test_model_governor.py  test_openai_compatible.py  test_order_tool.py  test_prompts.py  test_recommendations.py  test_rental_period.py  test_requirements.py  test_responses.py  test_run_memory_integration.py  test_scenario_kit.py  test_search.py  test_semantic_tool.py  test_store_tools.py  test_user_memory.py  test_user_memory_api.py  test_user_memory_integration.py  test_user_memory_repository.py
(+40 files in other folders)
