[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "gearmate-agent"
version = "0.1.0"
description = "GearMate electronics commerce assistant service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "openai>=1.68,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyjwt[crypto]>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "tzdata>=2025.1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]

[project.scripts]
gearmate = "gearmate.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/gearmate"]

[tool.hatch.build.targets.wheel.force-include]
"src/gearmate/prompts" = "gearmate/prompts"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
allowed-confusables = ["，", "：", "；", "？", "×", "（", "）"]

[tool.ruff.lint.isort]
known-first-party = ["gearmate"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["gearmate"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
